Bug 301648 - Some icons have separate handle when system tray widget is added to the desktop
Summary: Some icons have separate handle when system tray widget is added to the desktop
Status: RESOLVED FIXED
Alias: None
Product: plasma4
Classification: Unmaintained
Component: widget-systemtray (other bugs)
Version First Reported In: 4.8.90 (beta2)
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-06-11 14:18 UTC by Janek Bevendorff
Modified: 2012-06-21 19:49 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.9
Sentry Crash Report:


Attachments
Separate handle for network manager (29.24 KB, image/png)
2012-06-11 14:18 UTC, Janek Bevendorff
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Janek Bevendorff 2012-06-11 14:18:20 UTC
When the system tray widget is added to the desktop, some icons (device notifier and network manager) have separate handles and can be dragged out of the widget (see screen shot).

Although this MIGHT be intended behavior, it is very confusing since I get more than one handle showing up at the same time. Sometimes I get up to three all overlapping each other and making it impossible to hit the button I want, not to mention making it impossible to tell which handle belongs to which icon.

It is also confusing because the icons aren't really separate. Although I can drag them freely anywhere I want on my desktop, they are still parented to the main widget and therefore also move or close along with it.

Reproducible: Always

Steps to Reproduce:
1. Add the system tray widget to your desktop

Actual Results:  
There are separate widgets for device notifier and network manager and those should be used when dedicated widgets are needed. The icons in the tray, however, should just be icons and not semi-separate widgets. There is no need to have such functionality on a panel, and so is there no need for it on the desktop.
And neither should they have their own handles, nor should it be possible to move them outside the widget.
Comment 1 Janek Bevendorff 2012-06-11 14:18:59 UTC
Created attachment 71739 [details]
Separate handle for network manager
Comment 2 Marco Martin 2012-06-21 08:36:57 UTC
Git commit b5fca03fd6ce00b146e6096590c30dedfa200462 by Marco Martin.
Committed on 21/06/2012 at 10:35.
Pushed by mart into branch 'KDE/4.8'.

don't create handles when applet-in-applet

yet another reason why this shouldn't be done ever

M  +11   -0    plasma/applet.cpp

http://commits.kde.org/kdelibs/b5fca03fd6ce00b146e6096590c30dedfa200462