don't create handles when applet-in-applet

yet another reason why this shouldn't be done ever
BUG:301648